--- a/dono/config.json
+++ b/dono/config.json
@@ -1,16 +1,16 @@
 {
-	"prefix": "+",
-	"botName": "[🌹] DARK - BOT [🌹]",
-	"fotomenu": "https://telegra.ph/file/0277179fcb6fe1bd054ca.jpg",
-	"wallpaperLink": "https://telegra.ph/file/1af4b90256cec77a73092.jpg",
-	"numeroDono": "556199317165",
-	"donoName": "Pedrozz_Mods",
-	"criador": "[🌹] DARK STARS [🌹]",
-	"emoji": "🌹",
-	"bannerName": "DARK|STARS",
-	"dono1": "553898206779",
-	"dono2": "556199317165",
-	"dono3": "556199317165",
-	"linkp": "https://www.youtube.com/@Pedrozz_Mods",
+	"prefix": "!",
+	"botName": "REDZIN API",
+	"fotomenu": "http://telegra.ph/file/6be8c83b9c3d91735df0f.jpg",
+	"wallpaperLink": "http://telegra.ph/file/cd30417ce882d768a44e3.jpg",
+	"numeroDono": "5512988255401",
+	"donoName": "Redzin",
+	"criador": "Redzin",
+	"emoji": "❤",
+	"bannerName": "REDZIN|API",
+	"dono1": "5512988255401",
+	"dono2": "5512988255401",
+	"dono3": "5512988255401",
+	"linkp": "https://instagram/@redzinyz",
 	"porta": "3000"
 }
