--- a/dono/config.json
+++ b/dono/config.json
@@ -2,7 +2,7 @@
 	"prefix": "!",
 	"botName": "REDZIN API",
 	"fotomenu": "http://telegra.ph/file/6be8c83b9c3d91735df0f.jpg",
-	"wallpaperLink": "http://telegra.ph/file/cd30417ce882d768a44e3.jpg",
+	"wallpaperLink": "http://telegra.ph/file/1bd796620dd65c7ff1318.mp4",
 	"numeroDono": "5512988255401",
 	"donoName": "Redzin",
 	"criador": "Redzin",
